--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start-dev": "npx nodemon exec babel-node app.js",
     "dev": "npm run start-dev",
     "validate": "node ./scripts/data_validate.js",
-    "start": "NODE_ENV=production node dist/app.js",
+    "start": "NODE_ENV=production node app.js",
     "build": "rm -rf ./dist && NODE_ENV=production ./node_modules/@babel/cli/bin/babel.js app.js -d dist"
   },
   "author": "ekelen",
