--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "nodemon": "^1.19.4"
   },
   "engines": {
-    "node": ">=10.0.0",
-    "npm": ">=6.0.0"
+    "node": "16.14.2",
+    "npm": "8.5.0"
   }
 }
