--- a/package.json
+++ b/package.json
@@ -18,15 +18,30 @@
     "@babel/node": "^7.0.0",
     "@babel/preset-env": "^7.12.1",
     "body-parser": "^1.18.2",
-    "express": "^4.16.2",
     "fs": "0.0.1-security",
     "lodash.clonedeep": "^4.5.0",
     "lodash.range": "^3.2.0",
     "lodash.remove": "^4.7.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-promise-router": "^3.0.3",
+    "helmet": "^3.21.3",
+    "morgan": "^1.9.1",
+    "sweph": "^2.10.0-4"
   },
   "devDependencies": {
-    "nodemon": "^1.19.4"
+    "@types/express": "^4.17.6",
+    "@types/jest": "^25.2.1",
+    "coveralls": "^3.0.9",
+    "eslint": "^8.15.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "jest": "^28.1.0",
+    "nodemon": "^2.0.4",
+    "supertest": "^4.0.2"
   },
   "engines": {
     "node": "16.14.2",
